:tada: Importação inicial

--- a/aulas.html
+++ b/aulas.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-<nav class="flex items-center justify-between flex-wrap bg-white p-6 shadow-lg">
+<nav class="flex items-center justify-between flex-wrap border-t-4 border-red-600 bg-white p-6 shadow-lg">
     <div class="flex items-center flex-shrink-0 text-black mr-6">
         <img class="fill-current h-8 w-8 mr-2" src="res/img/logo.png" width="54" height="54" alt="">
         <span class="font-semibold text-xl tracking-tight">Inteligência Artificial</span>
@@ -46,18 +46,19 @@
             <a href="aulas.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-orange-500 no-underline mr-4">
                 Aulas
             </a>
-            <!--            <a href="trabalhos.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-green-500 mr-4">-->
-            <!--                Trabalhos-->
-            <!--            </a>-->
-            <!--            <a href="provas.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-blue-500 mr-4">-->
-            <!--                Provas-->
-            <!--            </a>-->
+            <a href="trabalhos.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-green-500 no-underline mr-4">
+		Trabalhos
+            </a>
+            <a href="provas.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-blue-500 no-underline mr-4">
+		Provas
+            </a>
             <a href="referencias.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-purple-600 no-underline mr-4">
                 Referências
             </a>
         </div>
     </div>
 </nav>
+
 
 <article class="container mx-auto lg:px-32 xl:px-64">
     <h1>Aulas</h1>
@@ -86,16 +87,273 @@
             <td class="text-left"><a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula02%20-%20Python%20b%C3%A1sico.ipynb">Conceitos de programação em Python</td>
             <td class="text-left">24/08/20</td>
         </tr>
+        
         <tr>
             <td class="text-left">Aula03</td>
-            <td class="text-left">Fundamentos da IA</td>
+            <td class="text-left">
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula03%20-%20Fundamentos%20da%20IA%20.pdf">
+                    Fundamentos da IA
+                </a>
+            </td>
             <td class="text-left">26/08/20</td>
         </tr>
+
+        <tr>
+            <td class="text-left">Aula04</td>
+            <td class="text-left">
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula04%20-%20Hist%C3%B3ria%20e%20aplica%C3%A7%C3%B5es%20da%20IA.pdf">
+                    História e aplicações da IA
+                </a>
+            </td>
+            <td class="text-left">31/08/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula05</td>
+            <td class="text-left">
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula05%20-%20Agentes%20Inteligentes.pdf">
+                    Conceito de agentes inteligentes
+                </a>
+            </td>
+            <td class="text-left">02/09/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">-</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Atividade complementar: resolução de problemas em Python
+                <!--/a-->
+            </td>
+            <td class="text-left">07/09/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula06</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Resolução de problemas por meio de busca
+                <!--/a-->
+            </td>
+            <td class="text-left">09/09/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula07</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Estratégias de busca sem informação
+                <!--/a-->
+            </td>
+            <td class="text-left">14/09/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula08</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Estratégias de busca heurísitica
+                <!--/a-->
+            </td>
+            <td class="text-left">16/09/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula09</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Estratégias de busca local
+                <!--/a-->
+            </td>
+            <td class="text-left">21/09/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula10</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Busca competitiva
+                <!--/a-->
+            </td>
+            <td class="text-left">23/09/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">-</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Avaliação Bimestral e entrega dos estudos dirigidos
+                <!--/a-->
+            </td>
+            <td class="text-left">07/10/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">-</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Atividades da Semana Acadêmica - TecPlus 2020
+                <!--/a-->
+            </td>
+            <td class="text-left">14/10/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula11</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Agentes lógicos
+                <!--/a-->
+            </td>
+            <td class="text-left">19/10/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula12</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Lógica de predicados e lógica de primeira ordem
+                <!--/a-->
+            </td>
+            <td class="text-left">21/10/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula13</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Programação Prolog: conceitos básicos
+                <!--/a-->
+            </td>
+            <td class="text-left">26/10/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula14</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Programação Prolog: listas
+                <!--/a-->
+            </td>
+            <td class="text-left">28/10/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula15</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Resolução de problemas em Prolog
+                <!--/a-->
+            </td>
+            <td class="text-left">02/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula16</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Programação Prolog: inferência lógica
+                <!--/a-->
+            </td>
+            <td class="text-left">04/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula17</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Raciocínio Probabilístico
+                <!--/a-->
+            </td>
+            <td class="text-left">09/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula18</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Raciocínio Probabilístico: Redes Bayesianas
+                <!--/a-->
+            </td>
+            <td class="text-left">11/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula19</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Raciocínio Probabilístico: Modelos Ocultos de Markov
+                <!--/a-->
+            </td>
+            <td class="text-left">16/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">Aula20</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Resolução de problemas usando Raciocínio probabilístico
+                <!--/a-->
+            </td>
+            <td class="text-left">18/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">-</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Atividade em grupo: resolução de problemas por meio da IA
+                <!--/a-->
+            </td>
+            <td class="text-left">23/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">-</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Apresentação do estudo dirigido. 
+                <!--/a-->
+            </td>
+            <td class="text-left">25/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">-</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Avaliação Bimestral
+                <!--/a-->
+            </td>
+            <td class="text-left">30/11/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">-</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Avaliação de segunda chamada
+                <!--/a-->
+            </td>
+            <td class="text-left">07/12/20</td>
+        </tr>
+
+        <tr>
+            <td class="text-left">-</td>
+            <td class="text-left">
+                <!--a class="hover:text-orange-500" href="#"-->
+                    Avaliação de exame final
+                <!--/a-->
+            </td>
+            <td class="text-left">14/12/20</td>
+        </tr>
+
+        
         </tbody>
     </table>
 
 </article>
 
-<footer class="py-8">.</footer>
+<footer class="py-2">.</footer>
 </body>
 </html>
