--- a/referencias.html
+++ b/referencias.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-<nav class="flex items-center justify-between flex-wrap bg-white p-6 shadow-lg">
+<nav class="flex items-center justify-between flex-wrap border-t-4 border-red-600 bg-white p-6 shadow-lg">
     <div class="flex items-center flex-shrink-0 text-black mr-6">
         <img class="fill-current h-8 w-8 mr-2" src="res/img/logo.png" width="54" height="54" alt="">
         <span class="font-semibold text-xl tracking-tight">Inteligência Artificial</span>
@@ -46,18 +46,20 @@
             <a href="aulas.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-orange-500 no-underline mr-4">
                 Aulas
             </a>
-            <!--            <a href="trabalhos.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-green-500 mr-4">-->
-            <!--                Trabalhos-->
-            <!--            </a>-->
-            <!--            <a href="provas.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-blue-500 mr-4">-->
-            <!--                Provas-->
-            <!--            </a>-->
+            <a href="trabalhos.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-green-500 no-underline mr-4">
+		Trabalhos
+            </a>
+            <a href="provas.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-blue-500 no-underline mr-4">
+		Provas
+            </a>
             <a href="referencias.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-purple-600 no-underline mr-4">
                 Referências
             </a>
         </div>
     </div>
 </nav>
+
+
 
 <article class="container mx-auto lg:px-32 xl:px-64">
     <h1>Referências bibliográficas</h1>
