--- a/trabalhos.html
+++ b/trabalhos.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-<nav class="flex items-center justify-between flex-wrap bg-white p-6 shadow-lg">
+<nav class="flex items-center justify-between flex-wrap border-t-4 border-red-600 bg-white p-6 shadow-lg">
     <div class="flex items-center flex-shrink-0 text-black mr-6">
         <img class="fill-current h-8 w-8 mr-2" src="res/img/logo.png" width="54" height="54" alt="">
         <span class="font-semibold text-xl tracking-tight">Inteligência Artificial</span>
@@ -47,10 +47,10 @@
                 Aulas
             </a>
             <a href="trabalhos.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-green-500 no-underline mr-4">
-                Trabalhos
+		Trabalhos
             </a>
             <a href="provas.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-blue-500 no-underline mr-4">
-                Provas
+		Provas
             </a>
             <a href="referencias.html" class="block mt-4 lg:inline-block lg:mt-0 text-gray-800 hover:text-purple-600 no-underline mr-4">
                 Referências
@@ -58,6 +58,7 @@
         </div>
     </div>
 </nav>
+
 
 <article class="container mx-auto lg:px-32 xl:px-64">
     <h1>Trabalhos</h1>
@@ -69,10 +70,26 @@
         <li>Criar um repositório chamado <b>inteligencia-artificial</b>.</li>
         <li>Adicionar o usuário do professor <b>(chaua)</b> aos colaboradores do projeto.</li>
         <li>Criar o arquivo README.md com o curso, disciplina, nome do aluno.</li>
+        <li>Submeter no <b>AVA</b> da disciplina os arquivos fonte e a url do repositório.</li> 
+
+    </ul>
+
+    <h2>1º Bimestre</h2>
+
+    <ul>
+        <li><a class="hover:text-green-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Trabalhos/trabalho1-hanoi.pdf">Trabalho 1: torre de hanói</a></li>
+        <li><a class="hover:text-green-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Trabalhos/trabalho2-labirinto.pdf">Trabalho 2: labirinto</a></li>
+    </ul>
+
+    <h2>2º Bimestre</h2>
+
+    <ul>
+        <li><a class="hover:text-green-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Trabalhos/trabalho3-caixeiro.pdf">Trabalho 3: caixeiro viajante</a></li>
+        <li><a class="hover:text-green-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Trabalhos/trabalho4-prolog.pdf">Trabalho 4: exercícios prolog</a></li>
     </ul>
 
 </article>
 
-<footer class="py-8">.</footer>
+<footer class="py-2">.</footer>
 </body>
 </html>
