:sparkles: Inclusão dos slides

--- a/aulas.html
+++ b/aulas.html
@@ -131,9 +131,9 @@
         <tr>
             <td class="text-left">Aula06</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula06%20-%20Resolu%C3%A7%C3%A3o%20de%20problemas.pdf">
                     Resolução de problemas por meio de busca
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">09/09/20</td>
         </tr>
@@ -141,9 +141,9 @@
         <tr>
             <td class="text-left">Aula07</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula07%20-%20Busca%20sem%20informa%C3%A7%C3%A3o.pdf">
                     Estratégias de busca sem informação
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">14/09/20</td>
         </tr>
@@ -151,9 +151,9 @@
         <tr>
             <td class="text-left">Aula08</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula08%20-%20Busca%20com%20informa%C3%A7%C3%A3o.pdf">
                     Estratégias de busca heurísitica
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">16/09/20</td>
         </tr>
@@ -161,9 +161,9 @@
         <tr>
             <td class="text-left">Aula09</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula09%20-%20Busca%20local.pdf">
                     Estratégias de busca local
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">21/09/20</td>
         </tr>
@@ -171,9 +171,9 @@
         <tr>
             <td class="text-left">Aula10</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula10%20-%20Busca%20competitiva.pdf">
                     Busca competitiva
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">23/09/20</td>
         </tr>
