:sparkles: adição de material

--- a/aulas.html
+++ b/aulas.html
@@ -192,7 +192,7 @@
             <td class="text-left">-</td>
             <td class="text-left">
                 <!--a class="hover:text-orange-500" href="#"-->
-                    Atividades da Semana Acadêmica - TecPlus 2020
+                    Correção da prova
                 <!--/a-->
             </td>
             <td class="text-left">14/10/20</td>
@@ -201,9 +201,9 @@
         <tr>
             <td class="text-left">Aula11</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Aulas/Aula11%20-%20Agentes%20L%C3%B3gicos.pdf">
                     Agentes lógicos
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">19/10/20</td>
         </tr>
@@ -211,9 +211,9 @@
         <tr>
             <td class="text-left">Aula12</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Material/taplog.pdf">
                     Lógica de predicados e lógica de primeira ordem
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">21/10/20</td>
         </tr>
@@ -221,9 +221,9 @@
         <tr>
             <td class="text-left">Aula13</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Material/taplog.pdf">
                     Programação Prolog: conceitos básicos
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">26/10/20</td>
         </tr>
@@ -231,9 +231,9 @@
         <tr>
             <td class="text-left">Aula14</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Material/taplog.pdf">
                     Programação Prolog: listas
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">28/10/20</td>
         </tr>
@@ -241,9 +241,9 @@
         <tr>
             <td class="text-left">Aula15</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Material/taplog.pdf">
                     Resolução de problemas em Prolog
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">02/11/20</td>
         </tr>
@@ -251,9 +251,9 @@
         <tr>
             <td class="text-left">Aula16</td>
             <td class="text-left">
-                <!--a class="hover:text-orange-500" href="#"-->
+                <a class="hover:text-orange-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Material/taplog.pdf">
                     Programação Prolog: inferência lógica
-                <!--/a-->
+                </a>
             </td>
             <td class="text-left">04/11/20</td>
         </tr>
