--- a/provas.html
+++ b/provas.html
@@ -83,7 +83,7 @@
     <h2>2º Bimestre</h2>
 
     <ul>
-        <li>TBD</li>
+        <li><a class="hover:text-blue-500" href="https://github.com/chaua/inteligencia-artificial/blob/master/Provas/prova2-artigo.pdf">Prova 2: artigo</a></li>
     </ul>
 
 </article>
